include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(analyze)
add_subdirectory(record)
add_subdirectory(index)
add_subdirectory(system)
add_subdirectory(execution)
add_subdirectory(parser)
add_subdirectory(optimizer)
add_subdirectory(storage)
add_subdirectory(common)
add_subdirectory(replacer)
add_subdirectory(transaction)
add_subdirectory(recovery)
if(TARGET gtest_main)
    add_subdirectory(test)
endif()


target_link_libraries(parser execution pthread)

include(CheckIncludeFileCXX)
check_include_file_cxx(readline/readline.h HAVE_READLINE_HEADER)
check_include_file_cxx(readline/history.h HAVE_READLINE_HISTORY_HEADER)
if(HAVE_READLINE_HEADER AND HAVE_READLINE_HISTORY_HEADER)
    add_executable(rmdb rmdb.cpp)
    target_link_libraries(rmdb parser execution readline pthread planner analyze)
else()
    message(STATUS "readline headers not found; skipping rmdb executable build in this environment")
endif()
